feat(i18n): :sparkles: 实现全应用语言切换功能，优化 Windows 字体回退显示与英文日期展示
🔧 升级开发脚本 dev_scripts 支持 slang 翻译文件的自动监听生成

--- a/lib/i18n/strings_en.i18n.json
+++ b/lib/i18n/strings_en.i18n.json
@@ -109,6 +109,12 @@
     "theme_light": "Light",
     "theme_dark": "Dark",
     "theme_color": "Theme Color",
+    "language": "Language",
+    "language_system": "System",
+    "language_zh": "Simplified Chinese",
+    "language_en": "English",
+    "language_ja": "Japanese",
+    "language_zh_tw": "Traditional Chinese",
     "profile_section": "Profile",
     "edit_profile": "Edit Profile",
     "edit_nickname": "Edit Nickname",
@@ -121,16 +127,16 @@
     "export_desc": "Generate a ZIP backup file containing all content",
     "exporting_data": "Exporting data...",
     "export_success": "Export Successful",
-    "export_success_desc": "Backup ZIP file saved at:\n{path}",
-    "export_failed": "Export failed: {error}",
+    "export_success_desc": "Backup ZIP file saved at:\n$path",
+    "export_failed": "Export failed: $error",
     "import_data": "Import from external ZIP",
     "import_desc": "Select a local ZIP file to overwrite and restore data",
     "confirm_restore": "Confirm Restore",
     "confirm_restore_desc": "Restoring a snapshot will overwrite all current data.\n\nConfirm to continue?",
     "restoring_data": "Restoring data...",
-    "restore_success": "Snapshot restored successfully: {diaries} diaries, {summaries} summaries",
+    "restore_success": "Snapshot restored successfully: $diaries diaries, $summaries summaries",
     "restore_failed_generic": "Restore failed",
-    "restore_failed": "Restore failed: {error}",
+    "restore_failed": "Restore failed: $error",
     "restore_snapshot": "Restore from snapshot",
     "restore_desc": "Select a local historical snapshot to restore",
     "no_snapshots_available": "No snapshots available",
@@ -149,7 +155,7 @@
     "click_to_view": "Click to view",
     "easter_egg_toast": "✨ You found a little secret!",
     "go_to_settings": "Go to Settings",
-    "tagline_short": "Record your precious memories",
+    "tagline_short": "Record memories",
     "add_provider": "Add Provider",
     "provider_info": "Provider Info",
     "provider_name": "Name",
@@ -353,7 +359,7 @@
     "error_dual_edit": "Cannot edit diary and summary at the same time"
   },
   "summary": {
-    "dashboard_title": "BaiShou Data Overview",
+    "dashboard_title": "Memories",
     "lookback_period": "Past $months Months",
     "collective_memories_title": "BaiShou • Collective Memories",
     "copy_memories": "Copy Collective Memory",
