--- a/lib/i18n/strings_ja.i18n.json
+++ b/lib/i18n/strings_ja.i18n.json
@@ -121,16 +121,16 @@
     "export_desc": "すべての内容を含む ZIP バックアップファイルを生成します",
     "exporting_data": "データを書き出し中...",
     "export_success": "出力成功",
-    "export_success_desc": "バックアップ ZIP ファイルはここに保存されました:\n{path}",
-    "export_failed": "出力失敗: {error}",
+    "export_success_desc": "バックアップ ZIP ファイルはここに保存されました:\n$path",
+    "export_failed": "出力失敗: $error",
     "import_data": "外部 ZIP から導入",
     "import_desc": "ローカルの ZIP ファイルを選択してデータを上書き復元します",
     "confirm_restore": "復元の確認",
     "confirm_restore_desc": "スナップショットを復元すると、現在のすべてのデータが上書きされます。\n\n続行しますか？",
     "restoring_data": "データを復元中...",
-    "restore_success": "スナップショットの復元に成功しました：{diaries} 件の日記、{summaries} 件の要約",
+    "restore_success": "スナップショットの復元に成功しました：$diaries 件の日記、$summaries 件の要約",
     "restore_failed_generic": "復元失敗",
-    "restore_failed": "復元失敗: {error}",
+    "restore_failed": "復元失敗: $error",
     "restore_snapshot": "スナップショットから復元",
     "restore_desc": "ローカルの履歴スナップショットから1つ選択して復元します",
     "no_snapshots_available": "利用可能なスナップショットはありません",
