--- a/lib/i18n/strings_zh.i18n.json
+++ b/lib/i18n/strings_zh.i18n.json
@@ -109,6 +109,12 @@
     "theme_light": "浅色模式",
     "theme_dark": "深色模式",
     "theme_color": "主题色",
+    "language": "语言",
+    "language_system": "跟随系统",
+    "language_zh": "简体中文",
+    "language_en": "English",
+    "language_ja": "日本語",
+    "language_zh_tw": "繁體中文",
     "profile_section": "个人资料",
     "edit_profile": "编辑编辑资料",
     "edit_nickname": "修改昵称",
@@ -121,16 +127,16 @@
     "export_desc": "生成一份包含所有内容的 ZIP 备份文件",
     "exporting_data": "正在导出数据...",
     "export_success": "导出成功",
-    "export_success_desc": "备份 ZIP 文件已保存在:\n{path}",
-    "export_failed": "导出失败: {error}",
+    "export_success_desc": "备份 ZIP 文件已保存在:\n$path",
+    "export_failed": "导出失败: $error",
     "import_data": "从外部 ZIP 导入",
     "import_desc": "选择本地 ZIP 文件覆盖恢复数据",
     "confirm_restore": "确认恢复",
     "confirm_restore_desc": "恢复快照将覆盖当前所有数据。\n\n确认继续？",
     "restoring_data": "正在恢复数据...",
-    "restore_success": "快照恢复成功：{diaries} 条日记，{summaries} 条总结",
+    "restore_success": "快照恢复成功：$diaries 条日记，$summaries 条总结",
     "restore_failed_generic": "恢复失败",
-    "restore_failed": "恢复失败: {error}",
+    "restore_failed": "恢复失败: $error",
     "restore_snapshot": "从快照恢复",
     "restore_desc": "从本地历史快照中选择一个进行恢复",
     "no_snapshots_available": "暂无可用快照",
