--- a/lib/i18n/strings_zh_TW.i18n.json
+++ b/lib/i18n/strings_zh_TW.i18n.json
@@ -109,6 +109,12 @@
     "theme_light": "淺色模式",
     "theme_dark": "深色模式",
     "theme_color": "主題色",
+    "language": "語言",
+    "language_system": "跟隨系統",
+    "language_zh": "簡體中文",
+    "language_en": "English",
+    "language_ja": "日本語",
+    "language_zh_tw": "繁體中文",
     "profile_section": "個人資料",
     "edit_profile": "編輯資料",
     "edit_nickname": "修改暱稱",
@@ -121,16 +127,16 @@
     "export_desc": "生成一份包含所有內容的 ZIP 備份文件",
     "exporting_data": "正在導出數據...",
     "export_success": "導出成功",
-    "export_success_desc": "備份 ZIP 文件已保存在:\n{path}",
-    "export_failed": "導出失敗: {error}",
+    "export_success_desc": "備份 ZIP 文件已保存在:\n$path",
+    "export_failed": "導出失敗: $error",
     "import_data": "從外部 ZIP 導入",
     "import_desc": "選擇本地 ZIP 文件覆蓋恢復數據",
     "confirm_restore": "確認恢復",
     "confirm_restore_desc": "恢復快照將覆蓋當前所有數據。\n\n確認繼續？",
     "restoring_data": "正在恢復數據...",
-    "restore_success": "快照恢復成功：{diaries} 條日記，{summaries} 條總結",
+    "restore_success": "快照恢復成功：$diaries 條日記，$summaries 條總結",
     "restore_failed_generic": "恢復失敗",
-    "restore_failed": "恢復失敗: {error}",
+    "restore_failed": "恢復失敗: $error",
     "restore_snapshot": "從快照恢復",
     "restore_desc": "從本地歷史快照中選擇一個進行恢復",
     "no_snapshots_available": "暫無可用快照",
