--- a/lib/i18n/ja.i18n.json
+++ b/lib/i18n/ja.i18n.json
@@ -98,7 +98,7 @@
     "general": "一般設定",
     "ai_services": "プロバイダー管理",
     "ai_services_desc": "OpenAI, Gemini, DeepSeek などの設定",
-    "ai_global_models": "グローバルデフォルトモデル",
+    "ai_global_models": "デフォルトモデル",
     "ai_global_desc": "タスクごとのデフォルトモデルを指定します",
     "ai_config": "AI 設定",
     "data_security": "データセキュリティ",
@@ -172,7 +172,7 @@
     "import_failed_with_error": "インポートに失敗しました: $error",
     "default_nickname": "白守ユーザー",
     "api_config": "API 設定",
-    "reset_default": "デフォルトに戻す",
+    "reset_default": "リセット",
     "testing_connection": "接続テスト中...",
     "test_connection": "接続テスト",
     "error_base_url_required": "Base URL を入力してください",
@@ -355,7 +355,7 @@
   "summary": {
     "dashboard_title": "白守データ概要",
     "lookback_period": "過去 $months ヶ月",
-    "collective_memories_title": "白守 • 共同の思い出",
+    "collective_memories_title": "共同の思い出",
     "copy_memories": "思い出をコピー",
     "algorithm_desc": "白守カスケード圧縮アルゴリズムにより、冗長なデータを自動的にフィルタリングし、共通の記憶の文脈を構築します。",
     "stats_yearly": "年間",
@@ -455,8 +455,8 @@
     "providers_label": "サービスプロバイダー",
     "manage_services_desc": "AI サービスを構成し管理する",
     "save_changes_button": "変更を保存",
-    "global_models_title": "グローバルデフォルトモデル",
-    "save_global_button": "グローバル構成を保存",
+    "global_models_title": "デフォルトモデル",
+    "save_global_button": "保存",
     "global_models_updated": "グローバルデフォルトモデルが更新されました",
     "no_models_error": "利用可能なモデルがありません。サービスプロバイダーを構成し、モデルを取得してください。",
     "summary_model_title": "記憶まとめモデル",
