feat: 综合功能优化与导航架构逻辑修复
1. 共同回忆：支持自定义拷贝前缀并实现功能持久化。
2. 引导页 (Onboarding)：重构引导流程，增加返回按钮，优化 UI 视觉并将 Logo 更换为云朵图标。
3. 局域网传输：移除 QR 码生成与扫码功能，回归纯净的雷达发现推送模式，清理冗余服务端逻辑。
4. 导航架构修复：
   - 重构 MainScaffold 的 PopScope 逻辑，引入基于 canPop() 的动态探测与 Future.microtask 延后调度。
   - 隔离设置子页路由栈：将设置子页改为走根路由 (rootNavigatorKey)，解决多分支切换后的后台静默 pop 和直接退出桌面的重大 Bug。
5. 代码维护：全面恢复被误删的关键逻辑注释，同步更新全语种 (ZH/EN/JA/TW) 翻译文件。

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -68,7 +68,8 @@
     "network_error": "Network Error",
     "timeout": "Request Timeout",
     "copied": "Copied to clipboard",
-    "copy_failed": "Failed to copy"
+    "copy_failed": "Failed to copy",
+    "back": "Back"
   },
   "onboarding": {
     "welcome_title": "Welcome to BaiShou",
@@ -81,6 +82,9 @@
     "ai_setup_desc": "BaiShou itself does not store your AI keys. Configure standard OpenAI compatible protocols to start your soul dialogue.",
     "api_key_label": "Gemini API Key",
     "api_key_hint": "Optional, configure in settings later",
+    "api_guide_title": "Setup API Connectivity",
+    "api_guide_desc": "BaiShou doesn't store your keys. Please go to \"Settings > Provider Management\" to configure OpenAI or Gemini protocols.",
+    "go_to_config": "Go to Config",
     "privacy_title": "Data, always yours",
     "privacy_desc": "Your data is stored only locally. With end-to-end sync, you maintain complete control over your memory sovereignty.",
     "get_started": "Start Journey",
@@ -374,6 +378,8 @@
     "tab_quarterly": "Quarterly",
     "tab_yearly": "Yearly",
     "toast_copied": "Collective memory copied to clipboard",
+    "copy_prefix_label": "Copy Prefix",
+    "copy_prefix_hint": "Automatically added to the front of copied content (e.g., Hi, these are my memories...)",
     "range_selector": "Statistic Range",
     "load_data": "Load Data",
     "loading": "Loading data...",
