feat(storage): 确立核心存储架构底座并实现影子索引闭环
1. 架构确立与边界巩固
- 实现基于 '物理文件 + SQLite 影子索引' 的双写存储架构，奠定白守数据主权基础。
- 引入 JournalFileService 解析 Markdown + YAML，统一读写边界。
- 建立 VaultService 状态级联刷新机制 (Cascade Refresh)，支持多库无缝切换。

2. 同步与容错机制 (Shadow Sync)
- 实现 ShadowIndexSyncService.fullScanVault 物理级全量扫描，赋予系统灾后自愈和跨端同步能力。
- 确立 '最终一致性' 策略，处理 SQLite 与硬盘读写无法达成分布式事务的物理限制。
- 补全 DiaryRepositoryImpl 的双向删除逻辑 (抹除物理文件 + 清理索引)。

3. 代码透明度与体验优化
- 深度注解核心模块的响应式流 (Stream) 和状态管理运转协议。
- 将硬编码错误提示迁移至 slang，并同步完成中（简/繁）、英、日四语言国际化适配。
- 优化异常反馈链路，通过向上传递明确的 Exception 触发 UI 层的交互式提示 (Toast)。

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -68,8 +68,15 @@
     "network_error": "Network Error",
     "timeout": "Request Timeout",
     "copied": "Copied to clipboard",
-    "copy_failed": "Failed to copy",
-    "back": "Back"
+    "copy_failed": "Copy failed",
+    "back": "Back",
+    "errors": {
+      "storage_path_not_found": "Could not get base storage path for device",
+      "data_load_failed": "Failed to load data",
+      "save_failed": "Failed to save",
+      "delete_failed": "Failed to delete",
+      "no_active_vault": "No active vault detected"
+    }
   },
   "onboarding": {
     "welcome_title": "Welcome to BaiShou",
